--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
             <h1 class="promo__title title">$MellCoin</h1>
             <div class="promo__descr">Our cryptocurrency, created with a humorous intent, offers entertainment value. While not intended for serious investment, it's meant to be enjoyed responsibly within its playful context</div>
                     <div class="promo-wrapper_model">
-                        <model-viewer class="promo__model" src="img/3dmodels/mellblend.glb" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="0" autoplay>        
+                        <model-viewer class="promo__model" src="img/3dmodels/mellblend.glb" camera-controls tone-mapping="neutral" poster="poster.webp" disable-zoom  shadow-intensity="0" autoplay>        
                     </div>
                 <div class="promo__social">
                     <a href="#" class="promo__social-link"><img src="icons/social/geckoterminalpng.svg" alt="geckoterminal"><span>geckoterminal</span></a>
@@ -103,7 +103,7 @@
     <section class="tokenomika">
         <div class="container">
             <div class="divider"></div>
-            <h2 class="tokenomika__title title">Tokenomica</h2>
+            <h2 class="tokenomika__title title">Tokenomics</h2>
             <div class="tokenomika-wrapper">
                 <div class="tokenomika__item">
                     <div class="tokenomika__item-title">Liquidity</div>
@@ -190,13 +190,15 @@
 
     <footer class="footer">
         <div class="container">
+            <div class="divider"></div>
             <div class="footer-wrapper">
-                <div><model-viewer class="footer__model" src="img/3dmodels/mellblend.glb" tone-mapping="neutral" poster="poster.webp" shadow-intensity="0" autoplay></model-viewer></div>        
+                <img class="footer__model" src="img/3dmodels/mellcoin.webp" alt="">
+                <img class='footer__model' src="img/3dmodels/mellcoin.webp" alt="">
+                
                 <div class="footer__text">$Mellcoin has nothing to do with Mellstroy and reality, 
                     before this there are exclusively meme coins that have no meaning 
                     no intrinsic value, no expectations of great financial success <br>
                     (c) 2024, $Mellcoin. All rights reserved</div>
-
             </div>
         </div>
     </footer>
