--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,23 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <div class="menu">
+        <div class="menu__block">
+        <nav>
+            <div class="menu__close"><img src="icons/social/close-icon.svg" alt=""></div>
+            <ul class="menu__list">
+                <li class="menu__link"><a href="">Token presale</a></li>
+                <li class="menu__link"><a href="">About</a></li>
+                <li class="menu__link"><a href="">Roadmap</a></li>
+                <li class="menu__link"><a href="">Meme</a></li>
+                <li class="menu__link"><a href="">Buy $MellCoin</a></li>
+            </ul>
+            <div class="menu__social"><a href=""><img src="icons/social/geckoterminalpng.svg" alt=""></a><a href=""><img src="icons/social/telegram.svg" alt=""></a><a href=""><img src="icons/social/twitter.svg" alt=""></div>
+        </nav>
+    </div>
+    <div class="menu__overlay"></div></div>
     <section class="promo">
+        <div class="hamburger"><span></span><span class="hamburger__long"></span><span></span></div>
         <div class="container">
             <header class="promo-header">
                 <nav>
@@ -47,7 +63,7 @@
         </div>
     </section>
 
-    <section class="roadmap"> 
+<section class="roadmap"> 
         <div class="container">
             <div class="roadmap__divider divider"></div>
             <h2 class="roadmap__title title">Roadmap</h2>
@@ -99,8 +115,8 @@
             </div>
         </div>
     </section>
-    
-    <section class="tokenomika">
+
+     <section class="tokenomika">
         <div class="container">
             <div class="divider"></div>
             <h2 class="tokenomika__title title">Tokenomics</h2>
@@ -154,7 +170,7 @@
                     <h3 class="guide__buy-title">where to buy TON?</h3>
                     <p class="guide__buy-descr">Buy TON with a card in wallets Tonkeeper or TonSpace. Alternatively, use CEXes such as OKX, Bybit, HTX, KuCoin, etc. Or you can use Uniswap (ETH) or PancakeSwap (BSC). Full list of exchanges is available on CoinMarketCap.</p>
                 </div>
-                <div class="guide__img"><img src="icons/guide/mellbuy.png" alt=""></div>
+                <div class="guide__img"><img src="icons/guide/mellbuy.jpg" alt=""></div>
             </div>
             <div class="guide-footer">
                 <div class="guide-footer__item">
@@ -188,7 +204,7 @@
         </div>      
     </section>
 
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container">
             <div class="divider"></div>
             <div class="footer-wrapper">
@@ -201,8 +217,8 @@
                     (c) 2024, $Mellcoin. All rights reserved</div>
             </div>
         </div>
-    </footer>
-    
+    </footer> -->
+
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
     <script src="js/script.js"></script>
 </body>
