--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
         </div>      
     </section>
 
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container">
             <div class="divider"></div>
             <div class="footer-wrapper">
@@ -217,7 +217,7 @@
                     (c) 2024, $Mellcoin. All rights reserved</div>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
     <script src="js/script.js"></script>
