--- a/src/index.html
+++ b/src/index.html
@@ -3,20 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mellcoin</title>
     <link rel="stylesheet" href="css/style.min.css">
-</head>
+    <link rel="apple-touch-icon" sizes="57x57" href="icons/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="icons/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="icons/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="icons/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="icons/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="icons/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="icons/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="icons/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="icons/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="icons/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="icons/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon/favicon-16x16.png">
+    <link rel="manifest" href="icons/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="icons/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 <body>
     <div class="menu">
         <div class="menu__block">
         <nav>
             <div class="menu__close"><img src="icons/social/close-icon.svg" alt=""></div>
             <ul class="menu__list">
-                <li class="menu__link"><a href="">Token presale</a></li>
-                <li class="menu__link"><a href="">About</a></li>
-                <li class="menu__link"><a href="">Roadmap</a></li>
-                <li class="menu__link"><a href="">Meme</a></li>
-                <li class="menu__link"><a href="">Buy $MellCoin</a></li>
+                <li class="menu__link"><a href="index.html#about">About</a></li>
+                <li class="menu__link"><a href="index.html#tokenomika">Tokenomiks</a></li>
+                <li class="menu__link"><a href="index.html#roadmap">Roadmap</a></li>
+                <li class="menu__link"><a href="index.html#guide">Buy $MellCoin</a></li>
+                <li class="menu__link"><a href="index.html#memes">Meme</a></li>
             </ul>
             <div class="menu__social"><a href=""><img src="icons/social/geckoterminalpng.svg" alt=""></a><a href=""><img src="icons/social/telegram.svg" alt=""></a><a href=""><img src="icons/social/twitter.svg" alt=""></div>
         </nav>
@@ -28,11 +44,11 @@
             <header class="promo-header">
                 <nav>
                     <ul class="promo-header__list">
-                        <li class="promo-header__list-item"><a href="#">Token presale</a></li>
-                        <li class="promo-header__list-item"><a href="#">About</a></li>
-                        <li class="promo-header__list-item"><a href="#">Roadmap</a></li>
-                        <li class="promo-header__list-item"><a href="#">Meme</a></li>
-                        <li class="promo-header__list-item"><a href="#">Buy $MellCoin</a></li>
+                        <li class="promo-header__list-item"><a href="index.html#tokenomika">Tokenomics</a></li>
+                        <li class="promo-header__list-item"><a href="index.html#about">About</a></li>
+                        <li class="promo-header__list-item"><a href="index.html#roadmap">Roadmap</a></li>
+                        <li class="promo-header__list-item"><a href="index.html#memes">Meme</a></li>
+                        <li class="promo-header__list-item"><a href="index.html#guide">Buy $MellCoin</a></li>
                     </ul>
                 </nav>
             </header>
@@ -40,7 +56,7 @@
             <h1 class="promo__title title">$MellCoin</h1>
             <div class="promo__descr">Our cryptocurrency, created with a humorous intent, offers entertainment value. While not intended for serious investment, it's meant to be enjoyed responsibly within its playful context</div>
                     <div class="promo-wrapper_model">
-                        <model-viewer class="promo__model" src="img/3dmodels/mellblend.glb" camera-controls tone-mapping="neutral" poster="poster.webp" disable-zoom  shadow-intensity="0" autoplay>        
+                        <model-viewer class="promo__model" src="img/3dmodels/mellblend.glb" camera-controls poster="poster.webp" disable-zoom  shadow-intensity="0" autoplay>        
                     </div>
                 <div class="promo__social">
                     <a href="#" class="promo__social-link"><img src="icons/social/geckoterminalpng.svg" alt="geckoterminal"><span>geckoterminal</span></a>
@@ -50,20 +66,24 @@
             </div>
         </div>
     </section>
-    <section class="about">
+    <section id="about" class="about">
         <div class="container">
             <div class="divider"></div>
         <div class="about-wrapper">
         <div>
-            <div class="about__title title">About <span>Mellstroy</span></div>
+            <h2 class="about__title title">About <span>Mellstroy</span></h2>
             <div class="about__img"><img src="icons/about/mellstroycasino.jpg" alt="about_mellcoin"></div>
         </div>
-            <div class="about__descr"><span>Mellstroy</span> is a well-known casino streamer whose winnings and shows attract numerous viewers both online and offline.<br><br><span>In</span> addition to his success in the casino world, Mellstroy has become an internet meme icon thanks to his funny reactions and memorable moments.<br><br><span>His</span> contests with substantial cash prizes are also popular.<br><br><span>Join</span> this iconic atmosphere by purchasing the $MellCoin meme coin. It not only symbolizes a famous meme personality but is also a great investment, as its value and popularity are expected to grow alongside Mellstroy's fame.</div>
+            <div class="about__descr"><p><span>Mellstroy</span> is a well-known casino streamer whose winnings and shows attract numerous viewers both online and offline.</p>
+            <p><span>In</span> addition to his success in the casino world, Mellstroy has become an internet meme icon thanks to his funny reactions and memorable moments.</p>
+            <p><span>His</span> contests with substantial cash prizes are also popular.</p>
+            <p><span>Join</span> this iconic atmosphere by purchasing the $MellCoin meme coin. It not only symbolizes a famous meme personality but is also a great investment, as its value and popularity are expected to grow alongside Mellstroy's fame.</p>
+            </div>
         </div>
         </div>
     </section>
 
-<section class="roadmap"> 
+<section id="roadmap" class="roadmap"> 
         <div class="container">
             <div class="roadmap__divider divider"></div>
             <h2 class="roadmap__title title">Roadmap</h2>
@@ -105,18 +125,18 @@
                     <div class="roadmap__item-list">
                         <ul>
                             <li class="roadmap__item-list__item">-MellGame</li>
-                            <li class="roadmap__item-list__item">-BackLiquidity</li>
+                            <li class="roadmap__item-list__item"></li>
                             <li class="roadmap__item-list__item"></li>
                             <li class="roadmap__item-list__item"></li>
                         </ul>
                     </div>
-                    <div class="roadmap__item-title">q5-2024</div>
+                    <div class="roadmap__item-title">q2-2025</div>
                 </div>
             </div>
         </div>
     </section>
 
-     <section class="tokenomika">
+     <section id="tokenomika" class="tokenomika">
         <div class="container">
             <div class="divider"></div>
             <h2 class="tokenomika__title title">Tokenomics</h2>
@@ -157,7 +177,7 @@
         </div>
     </section>
 
-    <section class="guide">
+    <section id="guide" class="guide">
         <div class="container">
             <div class="divider"></div>
             <h2 class="guide__title title">How to buy?</h2>
@@ -190,10 +210,10 @@
         </div>  
     </section>
 
-    <section class="memes">
+    <section id="memes" class="memes">
         <div class="container">
             <div class="divider"></div>
-            <div class="memes__title title">MellMemes</div>
+            <h2 class="memes__title title">MellMemes</h2>
             <div class="memes-wrapper">
                 <div class="memes__item"><img src="icons/memes/melltomoon.webp" alt=""></div>
                 <div class="memes__item"><img src="icons/memes/giphy-ezgif.com-video-to-webp-converter.webp" alt=""></div>
