--- a/src/index.html
+++ b/src/index.html
@@ -32,9 +32,9 @@
                 <li class="menu__link"><a href="index.html#tokenomika">Tokenomiks</a></li>
                 <li class="menu__link"><a href="index.html#roadmap">Roadmap</a></li>
                 <li class="menu__link"><a href="index.html#guide">Buy $MellCoin</a></li>
-                <li class="menu__link"><a href="index.html#memes">Meme</a></li>
+                <li class="menu__link"><a href="index.html#memes"></a></li>
             </ul>
-            <div class="menu__social"><a href=""><img src="icons/social/geckoterminalpng.svg" alt=""></a><a href=""><img src="icons/social/telegram.svg" alt=""></a><a href=""><img src="icons/social/twitter.svg" alt=""></div>
+            <div class="menu__social"><a href="#"><img src="icons/social/geckoterminalpng.svg" alt="#"></a><a href="https://t.me/mellcoinxyz"><img src="icons/social/telegram.svg" alt=""></a><a href="#"><img src="icons/social/twitter.svg" alt=""></div>
         </nav>
     </div>
     <div class="menu__overlay"></div></div>
@@ -47,8 +47,8 @@
                         <li class="promo-header__list-item"><a href="index.html#tokenomika">Tokenomics</a></li>
                         <li class="promo-header__list-item"><a href="index.html#about">About</a></li>
                         <li class="promo-header__list-item"><a href="index.html#roadmap">Roadmap</a></li>
-                        <li class="promo-header__list-item"><a href="index.html#memes">Meme</a></li>
                         <li class="promo-header__list-item"><a href="index.html#guide">Buy $MellCoin</a></li>
+                        <li class="promo-header__list-item"><a href="index.html#memes"></a></li>
                     </ul>
                 </nav>
             </header>
@@ -59,9 +59,9 @@
                         <model-viewer class="promo__model" src="img/3dmodels/mellblend.glb" camera-controls poster="poster.webp" disable-zoom  shadow-intensity="0" autoplay>        
                     </div>
                 <div class="promo__social">
-                    <a href="#" class="promo__social-link"><img src="icons/social/geckoterminalpng.svg" alt="geckoterminal"><span>geckoterminal</span></a>
-                    <a href="#" class="promo__social-link"><img src="icons/social/twitter.svg" alt="twitter"><span>twitter</span></a>
-                    <a href="#" class="promo__social-link"><img src="icons/social/telegram.svg" alt="telegram"><span>telegram</span></a>
+                    <a href="#" class="promo__social-link"><img src="icons/social/geckoterminalpng.svg" alt="geckoterminal"><span>soon...</span></a>
+                    <a href="#" class="promo__social-link"><img src="icons/social/twitter.svg" alt="twitter"><span>soon...</span></a>
+                    <a href="https://t.me/mellcoinxyz" class="promo__social-link"><img src="icons/social/telegram.svg" alt="telegram"><span>telegram</span></a>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
                             <li class="roadmap__item-list__item"><s>Social</s></li>
                             <li class="roadmap__item-list__item">-Presale</li>
                             <li class="roadmap__item-list__item">-Gecko</li>
-                            <li class="roadmap__item-list__item"></li>
+                            <li class="roadmap__item-list__item">-Aidrop</li>
                         </ul>
                     </div>
                     <div class="roadmap__item-title">q3-2024</div>
@@ -103,8 +103,8 @@
                     <div class="roadmap__item-list">
                         <ul>
                             <li class="roadmap__item-list__item">-Nft</li>
-                            <li class="roadmap__item-list__item">-Aidrop</li>
                             <li class="roadmap__item-list__item">-BigPartners</li>
+                            <li class="roadmap__item-list__item"></li>
                             <li class="roadmap__item-list__item"></li>
                         </ul>
                     </div>
@@ -143,7 +143,7 @@
             <div class="tokenomika-wrapper">
                 <div class="tokenomika__item">
                     <div class="tokenomika__item-title">Liquidity</div>
-                    <div class="tokenomika__item-percent">40%</div>
+                    <div class="tokenomika__item-percent">35%</div>
                     <div class="tokenomika__item-slider"><span></span></div>
                 </div>
                 <div class="tokenomika__item">
@@ -153,7 +153,7 @@
                 </div>
                 <div class="tokenomika__item">
                     <div class="tokenomika__item-title">Marketing</div>
-                    <div class="tokenomika__item-percent">10%</div>
+                    <div class="tokenomika__item-percent">15%</div>
                     <div class="tokenomika__item-slider"><span></span></div>
                 </div>
                 <div class="tokenomika__item">
@@ -183,12 +183,12 @@
             <h2 class="guide__title title">How to buy?</h2>
             <div class="guide-wrapper">
                 <div class="guide__buy">
-                    <h3 class="guide__buy-title">go to DeDust</h3>
-                    <p class="guide__buy-descr">Go to <a href="https://dedust.io/swap">DeDust</a> in Google Chrome, or on the browser inside your <a href="https://wallet.tg/ton">TonSpace</a>  app. Connect your wallet. Type the name or paste $MellCoin token address, and confirm. When Tonkeeper prompts you for a wallet signature, sign.</p>
+                    <h3 class="guide__buy-title">Go to <a href="https://app.ston.fi/swap?chartVisible=false&chartInterval=1w&ft=TON&tt=STON">StonFi</a></h3>
+                    <p class="guide__buy-descr">Open Google Chrome or use the browser within your TonSpace app. Go to <a href="https://app.ston.fi/swap?chartVisible=false&chartInterval=1w&ft=TON&tt=STON">StonFi</a> and connect your wallet. Enter the name or paste the $MellCoin token address, then confirm. When Tonkeeper prompts you for a wallet signature, sign it.</p>
                     <h3 class="guide__buy-title">BUY $MellCoin</h3>
                     <p class="guide__buy-descr">Swap TON for $MellCoin. We have zero taxes so you don’t need to worry about buying with a specific slippage, although you may increase it if your transaction fails.</p>
-                    <h3 class="guide__buy-title">where to buy TON?</h3>
-                    <p class="guide__buy-descr">Buy TON with a card in wallets Tonkeeper or TonSpace. Alternatively, use CEXes such as OKX, Bybit, HTX, KuCoin, etc. Or you can use Uniswap (ETH) or PancakeSwap (BSC). Full list of exchanges is available on CoinMarketCap.</p>
+                    <h3 class="guide__buy-title">Where to buy TON?</h3>
+                    <p class="guide__buy-descr">Buy TON with a card via Tonkeeper or TonSpace, or use CEXes like OKX, Bybit, HTX, KuCoin. You can also use Uniswap (ETH) or PancakeSwap (BSC). Find a full list on CoinMarketCap.</p>
                 </div>
                 <div class="guide__img"><img src="icons/guide/mellbuy.jpg" alt=""></div>
             </div>
@@ -205,24 +205,24 @@
             </div>
             <ul class="guide__address">
                 <li class="guide__address-title">Token address</li>
-                <li class="guide__address-text">EQDWuR1l5EbiGPf2_7VK0davJ6bkXwi4STx8VfaMqrJkd0tm</li>
+                <li class="guide__address-text">Soon....</li>
             </ul>
         </div>  
     </section>
 
-    <section id="memes" class="memes">
+    <!-- <section id="memes" class="memes">
         <div class="container">
             <div class="divider"></div>
             <h2 class="memes__title title">MellMemes</h2>
             <div class="memes-wrapper">
-                <div class="memes__item"><img src="icons/memes/melltomoon.webp" alt=""></div>
-                <div class="memes__item"><img src="icons/memes/giphy-ezgif.com-video-to-webp-converter.webp" alt=""></div>
-                <div class="memes__item"><img src="icons/memes/giphy-ezgif.com-video-to-webp-converter.webp" alt=""></div>
-                <div class="memes__item"><img src="icons/memes/giphy-ezgif.com-video-to-webp-converter.webp" alt=""></div>
-                <div class="memes__item"><img src="icons/memes/giphy-ezgif.com-video-to-webp-converter.webp" alt=""></div>
+                <div class="memes__item"><img src="icons/memes/gigamell.jpg" alt=""></div>
+                <div class="memes__item"><img src="icons/memes/takermell.jpg" alt=""></div>
+                <div class="memes__item"><img src="icons/memes/Picture3.jpg" alt=""></div>
+                <div class="mem es__item"><img src="icons/memes/spidermell.jpg" alt=""></div>
+                <div class="memes__item"><img src="icons/memes/mellholder.jpg" alt=""></div>
             </div>
         </div>      
-    </section>
+    </section> -->
 
     <footer class="footer">
         <div class="container">
